# yoshi

./: .gitignore  .pre-commit-config.yaml  README.md  law.cfg  luigi.cfg  pyproject.toml
.github/workflows/: container-build.yaml
data/: apptainer.def  conda-lock.yml  environment.yaml  pyproject.toml
data/data/: cli.py
yoshi/tasks/: __init__.py  base.py  data.py  waveforms.py  workflow.py
